--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# IDE CONF #
+############
 .idea/
+
+
+# OS TEMP  #
+############
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+*~
+*#
